Actions
Bug #4698
closedfix builds by gcc44 on sparc
Start date:
2014-03-22
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
build failed by gcc44 and latest illumos on sparc
Updated by Igor Kozhukhov about 8 years ago
- Status changed from New to In Progress
- % Done changed from 0 to 90
Updated by Electric Monk about 8 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 9c720e3bfb657054035cb780c4d222291b7d4917
commit 9c720e3bfb657054035cb780c4d222291b7d4917 Author: Igor Kozhukhov <ikozhukhov@gmail.com> Date: 2014-04-25T21:10:51.000Z 4698 fix builds by gcc44 on sparc Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Richard Lowe <richlowe@richlowe.net> Approved by: Dan McDonald <danmcd@omniti.com>
Actions